5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1884_1643.log
== TEST (2019-07-04 18:15:33) 
-- CODE:
from numpy import *
nota=array(eval(input("vetor de notas: ")))
a=0
for i in nota:
	if nota[i]>=5:
		a= a + 1
ap=zeros(a, dtype=int)
l=0
for v in nota:
	if nota[v]>=5:
		ap[l]=v
		l= l + 1
print(a)
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:16:31) 
-- CODE:
from numpy import *
nota=array(eval(input("vetor de notas: ")))
a=0
for i in nota:
	if (nota[i]>=5):
		a= a + 1
ap=zeros(a, dtype=int)
l=0
for v in nota:
	if (nota[v]>=)5:
		ap[l]=v
		l= l + 1
print(a)
print(ap)
-- ERROR:
File "XXXX", line 10
    if (nota[v]>=)5:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:16:41) 
-- CODE:
from numpy import *
nota=array(eval(input("vetor de notas: ")))
a=0
for i in nota:
	if (nota[i]>=5):
		a= a + 1
ap=zeros(a, dtype=int)
l=0
for v in nota:
	if (nota[v]>=5):
		ap[l]=v
		l= l + 1
print(a)
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:17:53) 
-- CODE:
from numpy import *
nota=array(eval(input("vetor de notas: ")))
alunos=size(notas)
a=0
for i in range(aluno):
	if (nota[i]>=5):
		a= a + 1
ap=zeros(a, dtype=int)
l=0
for v in range(aluno):
	if (nota[v]>=5):
		ap[l]=v
		l= l + 1
print(a)
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:18:11) 
-- CODE:
from numpy import *
nota=array(eval(input("vetor de notas: ")))
alunos=size(nota)
a=0
for i in range(aluno):
	if (nota[i]>=5):
		a= a + 1
ap=zeros(a, dtype=int)
l=0
for v in range(aluno):
	if (nota[v]>=5):
		ap[l]=v
		l= l + 1
print(a)
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:18:37) 
-- CODE:
from numpy import *
nota=array(eval(input("vetor de notas: ")))
alunos=size(nota)
a=0
for i in range(alunos):
	if (nota[i]>=5):
		a= a + 1
ap=zeros(a, dtype=int)
l=0
for v in range(alunos):
	if (nota[v]>=5):
		ap[l]=v
		l= l + 1
print(a)
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:18:47) 
-- CODE:
from numpy import *
nota=array(eval(input("vetor de notas: ")))
alunos=size(nota)
a=0
for i in range(alunos):
	if (nota[i]>=5):
		a= a + 1
ap=zeros(a, dtype=int)
l=0
for v in range(alunos):
	if (nota[v]>=5):
		ap[l]=v
		l= l + 1
print(a)
print(ap)
-- EXECUTION TIME:
1.00627
-- TEST CASE 1:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99]
---- correct output:
6
[0 3 4 5 6 7]
---- user output:
6
[0 3 4 5 6 7]
-- TEST CASE 2:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,5,2.3,6]
---- correct output:
8
[ 0  3  4  5  6  7  8 10]
---- user output:
8
[ 0  3  4  5  6  7  8 10]
-- TEST CASE 3:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99,6.1,3.6,2.9,10,8]
---- correct output:
9
[ 0  3  4  5  6  7 11 14 15]
---- user output:
9
[ 0  3  4  5  6  7 11 14 15]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
